--- a/WebContent/a00_com/main.css
+++ b/WebContent/a00_com/main.css
@@ -36,6 +36,7 @@
 	padding:20px 0 0 20px;
 }
 #board-intro>ul>li{
+	cursor:pointer;
 	padding:5px;
 }
 #board-intro>ul>li:hover{
@@ -45,6 +46,7 @@
 	padding:10px 20px 0 20px;
 }
 #board-list>ul>li{
+	cursor:pointer;
 	padding:5px;
 }
 /* #board-list>ul>li:last-child{
@@ -90,6 +92,7 @@
 	padding-left:20px;
 }
 #latest-comment>ul>li{
+	cursor:pointer;
 	padding-bottom:10px;
 }
 #latest-comment>ul>li:hover{
@@ -149,7 +152,7 @@
 	text-decoration:underline;
 }
 #announce-text{
-	width:57px;
+	width:70px;
 	height:12px;
 	color:white;
 	background:#708090;
